force-app/main/default/objects/Account/fields/BC_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>BC_Customer_Id__c</fullName>
    <description>Authoritative customer identifier from Microsoft Dynamics 365 Business Central.</description>
    <externalId>true</externalId>
    <label>BC Customer ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>