force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Commercial segment used for sales and service reporting.</description>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Telecom</fullName><default>false</default><label>Telecom</label></value>
            <value><fullName>Commercial and Industrial</fullName><default>false</default><label>Commercial and Industrial</label></value>
            <value><fullName>Residential</fullName><default>false</default><label>Residential</label></value>
            <value><fullName>Utility</fullName><default>false</default><label>Utility</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>