force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Global commercial region used for ownership, sharing, and reporting.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Nordics</fullName><default>false</default><label>Nordics</label></value>
            <value><fullName>Europe</fullName><default>false</default><label>Europe</label></value>
            <value><fullName>Asia Pacific</fullName><default>false</default><label>Asia Pacific</label></value>
            <value><fullName>Middle East and Africa</fullName><default>false</default><label>Middle East and Africa</label></value>
            <value><fullName>Americas</fullName><default>false</default><label>Americas</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>